fix: some responsive issue + legibility

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -5,7 +5,7 @@ $white-color: #ffffff;
 $text-color: #2f2f2f;
 $accent-color: #c21b24;
 $background-color: $white-color;
-$group-text-color: #989898;
+$group-text-color: #797979;
 $hero-color: #f1f1f1;
 $border-color: #ebebeb;
 $burger-color: #171616;
