--- a/assets/scss/critical.scss
+++ b/assets/scss/critical.scss
@@ -329,11 +329,11 @@
     }
 
     &-bio {
-      width: 70%;
+      width: 80%;
     }
 
     &-portrait {
-      width: 30%;
+      width: 20%;
     }
   }
 
@@ -366,11 +366,11 @@
     }
 
     &-bio {
-      width: 60%;
+      width: 59%;
     }
 
     &-portrait {
-      width: 40%;
+      width: 41%;
     }
   }
 }
